# vais-mcp

./: .env.template  Dockerfile  Makefile  README.md  entrypoint.sh  main.py  pyproject.toml
src/vais-mcp/: server.py  vais.py
src/vais_mcp/: config.py  server.py  vais.py
