[project]
name = "vais-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "google-cloud-discoveryengine>=0.13.8",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[project.scripts]
# vais-mcp = "uvicorn vais_mcp.server:app --host 0.0.0.0 --port 8000"
vais-mcp = "uv run src/vais-mcp/server.py"
