[project]
name = "vais_mcp"
version = "0.1.0"
description = "Vertex AI Searchを用いたMCPサーバー (ここに具体的な説明を記述してください)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Shintaro Mormioto", email = "mrmtsntr1@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "google-cloud-discoveryengine>=0.13.8",
    "uvicorn>=0.34.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vais", "mcp", "vertex ai search", "fastapi"]
urls = { "Homepage" = "https://github.com/yourusername/vais-mcp", "Repository" = "https://github.com/yourusername/vais-mcp" }

[project.optional-dependencies]
dev = [
    "ruff>=0.11.8",
]

[project.scripts]
vais-mcp = "vais_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]
