[project]
name = "vais_mcp"
version = "0.1.0"
description = "Vertex AI Searchを用いたMCPサーバー (ここに具体的な説明を記述してください)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "google-cloud-discoveryengine>=0.13.8",
    "uvicorn>=0.34.2",
]
license = {text = "Apache-2.0"}
license-files = ["LICENSE"]

authors = [
  { name = "Shintaro Mormioto", email = "mrmtsntr1@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.8",
]

[project.scripts]
vais-mcp = "vais_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"